alignment fix for nested columns block

--- a/blocks/nested-columns/nested-columns.css
+++ b/blocks/nested-columns/nested-columns.css
@@ -7,9 +7,8 @@
 
 .nested-columns-col {
   display: flex;
-  flex-direction: column;
-  align-items: stretch;
-  gap: 24px;
+  align-items: center;
+  gap: 36px;
 }
 
 @media (width >= 900px) {
